# Tomur

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  NOTICE  README.en.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  Tomur.slnx
app/: Program.cs  Tomur.csproj
app/Agents/: AgentEventLog.cs  AgentLog.cs  AgentRuntimeContracts.cs  AgentRuntimeService.cs  AgentTelemetry.cs  FileIndexStore.cs  LocalChatClient.cs  ModelToolProtocol.cs  ToolExecutionService.cs  ToolFactory.cs  ToolFunctions.cs  ToolInvoker.cs
app/Api/: ApiRouteExtensions.cs  CompatibilityProtocolLimits.cs  HealthEndpoint.cs  HealthResponse.cs  JsonHttpResponse.cs  RootResponse.cs  RuntimeSessionRequests.cs  StreamingErrorResponse.cs  ToolCallingChatAdapter.cs
app/Cli/: ApiKeyCommand.cs  CliApplication.cs  CommandLineHelpers.cs  DoctorCommand.cs  InternalCommand.cs  LocalApiHost.cs  ModelCommand.cs  NativeCommand.cs  ProcessRunner.cs  ServeCommand.cs  ServiceCommand.cs  TrayApplication.cs
app/Config/: ConfigurationState.cs  ConfigurationStore.cs  DataPaths.cs  Defaults.cs  LocalConfiguration.cs  PathOptions.cs  ServerOptions.cs
app/Conversations/: ConversationContracts.cs  ConversationLog.cs  ConversationOrchestrationService.cs  ConversationStore.cs
app/Diagnostics/: LogBroadcastService.cs  RingBufferLoggerProvider.cs
app/Hardware/: AccelerationBackendStatus.cs  AccelerationPlan.cs  AcceleratorDevice.cs  AcceleratorKind.cs  HardwareAccelerationService.cs  LlamaBackendDeviceCatalog.cs  RuntimeBackendCatalog.cs
app/Inference/: InferenceContracts.cs  InferenceLog.cs  LlamaBackendInitializer.cs  LlamaHandles.cs  LlamaImportResolver.cs  LlamaNativeMethods.cs  LlamaNativeSession.cs  LlamaPromptBuilder.cs  LocalInferenceService.cs  SessionManager.cs
app/Models/: DownloadAsset.cs  HardwareProfile.cs  InstallManifest.cs  ModelBundleAsset.cs  ModelCatalog.cs  ModelInstallService.cs  ModelLog.cs  ModelPackage.cs  ProxySettings.cs
app/Multimodal/: ImageGenerationWorkerContracts.cs  IsolatedImageGenerationService.cs  MultimodalContracts.cs  MultimodalExecutionService.cs  MultimodalLog.cs  MultimodalNativeMethods.cs  MultimodalRuntimeService.cs  MultimodalRuntimeStatus.cs  NativeResult.cs
app/Native/: INativeBundlePreparer.cs  INativeBundleProbe.cs  INativeLibraryLoader.cs  INativeLibraryResolver.cs  NativeBuildPlan.cs  NativeBuildPlanner.cs  NativeBundleComponent.cs  NativeBundleFilePrepareResult.cs  NativeBundleLibrary.cs  NativeBundleManifest.cs  NativeBundlePaths.cs  NativeBundlePrepareResult.cs  NativeBundlePreparer.cs  NativeBundleProbe.cs  NativeBundleProbeResult.cs  NativeBundleSource.cs  NativeBundleVariant.cs  NativeComponentProbeResult.cs  NativeLibraryLoadResult.cs  NativeLibraryLoader.cs  NativeLibraryProbeResult.cs  NativeLibraryResolution.cs  NativeLibraryResolver.cs  NativeLog.cs  NativeRuntimePreference.cs  README.md
app/Properties/: AssemblyInfo.cs  launchSettings.json
app/Providers/: ManagedProviderReleaseManifest.cs  ModelProviderContracts.cs  ModelProviderManifest.cs  ModelProviderRegistry.cs
app/Runtime/: DiagnosticItem.cs  DirectoryState.cs  DiskState.cs  DoctorReport.cs  LocalModelCatalog.cs  PortState.cs  ProxyState.cs  ReleaseProfile.cs  RuntimeDiagnostic.cs  RuntimeDiagnosticsProvider.cs  RuntimeLog.cs  RuntimeStatusResponse.cs  SystemSnapshot.cs
app/Serialization/: AppJsonSerializerContext.cs
app/Services/: VersionProvider.cs
app/Storage/: ApiKeyRecord.cs  ApiKeyStore.cs  ApiKeyStoreState.cs  LocalDatabaseInitializer.cs  LocalDatabaseState.cs
app/Web/: README.md
docs/: r10-r11-smoke-maintenance.md  r12-aot-release-audit.md  r12-native-bundle-inventory.md  r12-release-package-structure.md  r12-service-smoke.md  r14-intel-acceleration-smoke.md  r15-glm4-moe-lite-validation.md  r15-olmoe-o5-validation.md  r15-olmoe-smoke.md  r15-packed-glm-smoke.md  r15-remote-validation-handoff.md  r8-smoke-report.md  r9-aot-trimming-audit.md
native/: README.md  bundle.manifest.json
native/llama.native/: CMakeLists.txt  CMakePresets.json  README.md  llama_vlm_bridge.cpp
native/ocr.native/: CMakeLists.txt  CMakePresets.json  README.md  paddleocrvl_bridge.cpp
native/stable-diffusion.native/: CMakeLists.txt  CMakePresets.json  README.md  stable_diffusion_bridge.c  stable_diffusion_image_bridge.cpp
native/tts.native/: CMakeLists.txt  CMakePresets.json  README.md  tts_bridge.cpp
native/whisper.native/: CMakeLists.txt  CMakePresets.json  README.md  whisper_bridge.c
providers/Abstractions/: AssemblyInfo.cs  InferenceContracts.cs  LocalModelDescriptor.cs  ModelProviderContracts.cs  ModelProviderManifest.cs  Tomur.Providers.Abstractions.csproj
providers/Glm/: AssemblyInfo.cs  GlmModelConfiguration.cs  ManagedGlmProvider.cs  ModelDirectoryProbe.cs  README.md  ROADMAP.md  SafeTensorCatalog.cs  Tomur.Providers.Glm.csproj
providers/Olmoe/: AssemblyInfo.cs  ManagedOlmoeProvider.cs  OlmoeModel.cs  OlmoeModelConfiguration.cs  OlmoeModelConverter.cs  OlmoeModelDirectoryProbe.cs  OlmoePromptTemplate.cs  OlmoeRuntime.cs  OlmoeTextGenerator.cs  ROADMAP.md  Tomur.Providers.Olmoe.csproj
tests/Tomur.Providers.M1.Tests/: ManagedModelFixture.cs  ModelProbeTests.cs  ProviderRegistryTests.cs  Tomur.Providers.M1.Tests.csproj
tests/Tomur.Providers.M10.Tests/: AgentAutonomousToolSafetyTests.cs  M10IntegrationTests.cs  OllamaToolCallingWireContractTests.cs  OpenAiToolCallingWireContractTests.cs  Qwen35ModelPackageTests.cs  Tomur.Providers.M10.Tests.csproj  ToolCallingProtocolTests.cs
tests/Tomur.Providers.M11.Tests/: ExpertCacheOptimizationTests.cs  OptimizedKernelTests.cs  Tomur.Providers.M11.Tests.csproj
tests/Tomur.Providers.M12.Tests/: AdvancedGenerationTests.cs  KvAndPrefetchTests.cs  Tomur.Providers.M12.Tests.csproj
tests/Tomur.Providers.M13.Tests/: NativeCuda129Tests.cs  ReleaseCompatibilityTests.cs  Tomur.Providers.M13.Tests.csproj
tests/Tomur.Providers.M2.Tests/: TinyFixtureTests.cs  Tomur.Providers.M2.Tests.csproj
tests/Tomur.Providers.M3.Tests/: TensorStorageTests.cs  Tomur.Providers.M3.Tests.csproj
web/: index.html  package.json  tsconfig.node.json  vite.config.ts
(+131 files in other folders)
